--- a/css/home.css
+++ b/css/home.css
@@ -31,6 +31,45 @@ body h1
 	margin-bottom: 100px;
 }
 
+
+#topNavigation
+{
+	vertical-align: top;
+	float: right;
+	
+}
+#topNavigation ul
+{
+
+	padding-top: 5px;
+}
+ .topLinkList
+{
+	display: inline;
+	/*padding-right: 10px;*/
+	
+	
+}
+
+.topLinks
+{
+	color:white;
+	font-weight: 100;
+	font-size: 18px;
+	font-style: italic;
+	text-decoration: none;
+	
+	
+}
+
+.topLinkStick
+{
+	color:grey;
+	opacity: 0.5;
+	font-weight: 100;
+}
+
+
  
 body img
 {
