--- a/css/home.css
+++ b/css/home.css
@@ -46,7 +46,7 @@ body h1
  .topLinkList
 {
 	display: inline;
-	/*padding-right: 10px;*/
+	
 	
 	
 }
@@ -67,6 +67,7 @@ body h1
 	color:grey;
 	opacity: 0.5;
 	font-weight: 100;
+	margin-left: 1px;
 }
 
 
