updating loginIndex and session.php and sigUp.php

--- a/css/login.css
+++ b/css/login.css
@@ -108,9 +108,11 @@ section article
 
 #loginErr
 {
-	color:white;
+	color:red;
 	display: inline;
 	font-size: 15px;
+	margin-left: auto;
+	margin-right: auto;
 	
 }
 
