updating loginIndex and session.php and sigUp.php

--- a/css/login.css
+++ b/css/login.css
@@ -111,7 +111,7 @@ section article
 	color:red;
 	display: inline;
 	font-size: 15px;
-	margin-left: auto;
+	margin-left: 100px;
 	margin-right: auto;
 	
 }
